# favihunter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  favihunter.py  pyproject.toml  requirements.txt
favihunter/: engines.yaml  favihunter.py
favihunter/collectors/: collector_functions.py
favihunter/printers/: printing_functions.py
favihunter/utils/: utils.py
